[gd_scene load_steps=20 format=3 uid="uid://cu8y2ttwddm5u"]

[ext_resource type="Script" path="res://scripts/slimerojo.gd" id="1_ifftc"]
[ext_resource type="Texture2D" uid="uid://cwaqwvuph1gp6" path="res://assets/sprites/slime_purple.png" id="2_1bnde"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kosv0"]
atlas = ExtResource("2_1bnde")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjxdy"]
atlas = ExtResource("2_1bnde")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ue4g"]
atlas = ExtResource("2_1bnde")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo67w"]
atlas = ExtResource("2_1bnde")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca3wj"]
atlas = ExtResource("2_1bnde")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqcrw"]
atlas = ExtResource("2_1bnde")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_je4sn"]
atlas = ExtResource("2_1bnde")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o5x1"]
atlas = ExtResource("2_1bnde")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5has"]
atlas = ExtResource("2_1bnde")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6o1d"]
atlas = ExtResource("2_1bnde")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxpdo"]
atlas = ExtResource("2_1bnde")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ohnd"]
atlas = ExtResource("2_1bnde")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_arj2d"]
atlas = ExtResource("2_1bnde")
region = Rect2(48, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_n7k5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kosv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjxdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ue4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo67w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca3wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqcrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je4sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o5x1")
}],
"loop": false,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5has")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6o1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxpdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ohnd")
}],
"loop": false,
"name": &"get_hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_arj2d")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5m6bq"]
size = Vector2(16, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocg7i"]
size = Vector2(8, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7lti"]
size = Vector2(94, 22)

[node name="slimerojo" type="CharacterBody2D" groups=["enemy", "slimes"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_ifftc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_n7k5c")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_5m6bq")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(9, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(-9, 0)

[node name="hit_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="die_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_ocg7i")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_r7lti")

[connection signal="body_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="die_timer" to="." method="_on_die_timer_timeout"]
